fix: hide sidebar link text when collapsed (#11834)

--- a/src/global.less
+++ b/src/global.less
@@ -61,6 +61,10 @@ body,
   left: unset;
 }
 
+.ant-pro-sider-collapsed .ant-pro-sider-link span:not([role='img']) {
+  display: none;
+}
+
 canvas {
   display: block;
 }
